* Live provisioning * Added client-side signing and pushing

--- a/lib/poolparty/templates/puppet.conf
+++ b/lib/poolparty/templates/puppet.conf
@@ -1,6 +1,13 @@
 [main]
-vardir = /var/lib/puppet
-logdir = /var/log/puppet
+  vardir = /var/lib/puppet
+  logdir = /var/log/puppet
  
 [puppetd]
-localconfig = $vardir/localconfig
+  localconfig = $vardir/localconfig
+  pluginsync=false
+  factsync=false
+  report=true
+
+[puppetmasterd]
+  certname = puppet
+  node_name = puppet
