More live testing

--- a/lib/poolparty/templates/puppet.conf
+++ b/lib/poolparty/templates/puppet.conf
@@ -1,9 +1,10 @@
 [main]
   vardir = /var/lib/puppet
   logdir = /var/log/puppet
+  templatepath = /var/lib/puppet/templates
  
 [puppetd]
-  localconfig = $vardir/localconfig
+  localconfig = ${vardir}/localconfig
   pluginsync=false
   factsync=false
   report=true
