--- a/lib/poolparty/templates/namespaceauth.conf
+++ b/lib/poolparty/templates/namespaceauth.conf
@@ -1,2 +1,19 @@
-[puppetrunner] 
+[fileserver]
   allow *
+  allow *.internal
+
+[puppetmaster]
+  allow *
+  allow *.internal
+
+[puppetrunner]
+  allow *
+  allow *.internal
+
+[puppetbucket]
+  allow *
+  allow *.internal
+
+[puppetreports]
+  allow *
+  allow *.internal
