--- a/lib/poolparty/templates/haproxy.conf
+++ b/lib/poolparty/templates/haproxy.conf
@@ -26,10 +26,9 @@ defaults
   # Stats
   stats enable
   stats uri /haproxy
-  stats realm Statistics\ for\ <%= $name %>
-  stats refresh 5s
+  stats realm Statistics\ for\ <%= name %>
 
-listen web_proxy 0.0.0.0:<%= port -%>
+listen <%= name %> 0.0.0.0:<%= port %>
   <% node_ips.each_with_index do |ip, index| -%>
-    server server_<%= index %> <%= ip %>:<%= port %> weight 1 check inter 60s rise 2 fall 5 maxconn 1
+    server node<%= index %> <%= ip %>:<%= forwarding_port %> weight 1 check cookie
   <% end -%>
