Live testing   * Added more haproxy options on the cloud   * Updated base   * Changed ideology behind the provisioners   * Added array-able variables

--- a/lib/poolparty/templates/haproxy.conf
+++ b/lib/poolparty/templates/haproxy.conf
@@ -28,7 +28,9 @@ defaults
   stats uri /haproxy
   stats realm Statistics\ for\ <%= name %>
 
-listen <%= name %> 0.0.0.0:<%= port %>
-  <% node_ips.each_with_index do |ip, index| -%>
+listen <%= name %> 
+    bind :<%= ports.join(",:") %>
+    <% node_ips.each_with_index do |ip, index| -%>
+    cookie POOLPARTYPARTY
     server node<%= index %> <%= ip %>:<%= forwarding_port %> weight 1 check cookie
   <% end -%>
