Removed the nodes from appearing in the manifest Updated the conf to use master as the master node

--- a/lib/poolparty/templates/puppet.conf
+++ b/lib/poolparty/templates/puppet.conf
@@ -2,12 +2,14 @@
   vardir = /var/lib/puppet
   logdir = /var/log/puppet
   templatepath = /var/lib/puppet/templates
+  server = master
  
 [puppetd]
-  localconfig = ${vardir}/localconfig
+  localconfig = $vardir/localconfig
   pluginsync=false
   factsync=false
   report=true
+  server = master
 
 [puppetmasterd]
-  certname = puppet
+  certname = master
