New master build script

--- a/lib/poolparty/templates/haproxy.conf
+++ b/lib/poolparty/templates/haproxy.conf
@@ -29,7 +29,7 @@ defaults
   stats realm Statistics\ for\ <%= name %>
 
 listen <%= name %> 
-    bind :<%= ports.join(",:") %>
+    bind 0.0.0.0:<%= ports.join(",0.0.0.0:") %>
     <% node_ips.each_with_index do |ip, index| -%>
     cookie POOLPARTYPARTY
     server node<%= index %> <%= ip %>:<%= forwarding_port %> weight 1 check cookie
