Added basic git plugin Updated haproxy loading Moved custom install tasks to the top of the list for provisioning

--- a/lib/poolparty/templates/haproxy.conf
+++ b/lib/poolparty/templates/haproxy.conf
@@ -25,8 +25,8 @@ defaults
   
   # Stats
   stats enable
-  stats uri /haproxy
-  stats realm Statistics\ for\ <%= name %>
+  stats uri /poolparty
+  stats realm Statistics\ for\ PoolParty
 
 listen <%= name %> 
     bind 0.0.0.0:<%= ports.join(",0.0.0.0:") %>
