Added a little more documentation Changed the puppetd to just run listen, instead of test Updated the puppet.conf

--- a/lib/poolparty/templates/puppet.conf
+++ b/lib/poolparty/templates/puppet.conf
@@ -5,10 +5,13 @@
  
 [puppetd]
   localconfig = $vardir/localconfig
-  pluginsync=false
+  pluginsync=true
   factsync=false
   report=true
   server=master
 
+[puppetrun]
+  certname = master
+  
 [puppetmasterd]
   certname = master
