--- a/lib/poolparty/templates/haproxy.conf
+++ b/lib/poolparty/templates/haproxy.conf
@@ -28,9 +28,9 @@ defaults
   stats uri /poolparty
   stats realm Statistics\ for\ PoolParty
 
-listen <%= name %> 
-    bind 0.0.0.0:<%= ports.join(",0.0.0.0:") %>
-    <% node_ips.each_with_index do |ip, index| -%>
+listen <%= name_haproxy %> 
+    bind 0.0.0.0:<%= ports_haproxy.join(",0.0.0.0:") %>
+    <% node_ips_haproxy.each_with_index do |ip, index| -%>
     cookie POOLPARTYPARTY
     server node<%= index %> <%= ip %>:<%= forwarding_port %> weight 1 check cookie
   <% end -%>
