Removed stubbed cib.xml for heartbeat Updated gem_package to include the requires for rubygems Updated puppet.conf stub Updated poolparty.rb requires for the gems Updated website with syntax highlighting Added new gemspec for github

--- a/lib/poolparty/templates/puppet.conf
+++ b/lib/poolparty/templates/puppet.conf
@@ -5,7 +5,7 @@
  
 [puppetd]
   localconfig = $vardir/localconfig
-  pluginsync=true
+  pluginsync=false
   factsync=false
   report=true
   server=master
