Up'd version and updated templateing

--- a/lib/poolparty/templates/puppet.conf
+++ b/lib/poolparty/templates/puppet.conf
@@ -1,12 +1,11 @@
 [main]
   vardir = /var/lib/puppet
   logdir = /var/log/puppet
-  templatepath = /var/lib/puppet/templates
+  pluginsync=true
+  factsync=false
  
 [puppetd]
-  localconfig = $vardir/localconfig
-  pluginsync=false
-  factsync=false
+  localconfig = $vardir/localconfig      
   report=true
   server=master
 
