--- a/lib/poolparty/templates/haproxy.conf
+++ b/lib/poolparty/templates/haproxy.conf
@@ -30,7 +30,7 @@ defaults
 
 listen <%= name_haproxy %> 
     bind 0.0.0.0:<%= ports_haproxy.join(",0.0.0.0:") %>
-    <% node_ips_haproxy.each_with_index do |ip, index| -%>
     cookie POOLPARTYPARTY
+    <%- node_ips_haproxy.chomp.split(/\t/).each_with_index do |ip, index| -%>    
     server node<%= index %> <%= ip %>:<%= forwarding_port %> weight 1 check cookie
-  <% end -%>
+    <%- end -%>
