Updated conf and git

--- a/lib/poolparty/templates/puppet.conf
+++ b/lib/poolparty/templates/puppet.conf
@@ -1,7 +1,7 @@
 [main]
   vardir = /var/lib/puppet
   logdir = /var/log/puppet
-  pluginsync=true
+  pluginsync=false
   factsync=false
  
 [puppetd]
