--- a/lib/erlang/messenger/Rakefile
+++ b/lib/erlang/messenger/Rakefile
@@ -14,6 +14,12 @@ rule ".beam" =>  ["%{ebin,src}X.erl"] do |t|
 end
 
 task :compile => ['ebin'] + OBJ
+task :dcompile do
+  Dir["#{::File.dirname(__FILE__)}/src/*.erl"].each do |t|
+    Kernel.system "erlc -pa ebin -W #{ERLC_FLAGS} -Ddebug -o ebin #{t}"
+  end  
+end
+
 task :default => :compile
 
 task :run_tests => [:compile] do
