Updated haproxy to use names, upp'd version and created new gem for github

--- a/lib/poolparty/templates/haproxy.conf
+++ b/lib/poolparty/templates/haproxy.conf
@@ -28,7 +28,7 @@ defaults
   stats uri /poolparty
   stats realm Statistics\ for\ PoolParty
 
-listen <%= name_haproxy %> 
+listen poolparty
     bind 0.0.0.0:<%= ports_haproxy.join(",0.0.0.0:") %>
     cookie POOLPARTYPARTY
     <%- node_ips_haproxy.chomp.split(/\t/).each_with_index do |ip, index| -%>    
