Updated provisioning base Updated server host updating Updated puppet cleaner for the first time run Using generic certs across the nodes, instead of auto-created ones Updated fixes for the deploydirectory

--- a/lib/poolparty/templates/puppet.conf
+++ b/lib/poolparty/templates/puppet.conf
@@ -1,16 +1,26 @@
 [main]
   vardir = /var/lib/puppet
   logdir = /var/log/puppet
-  pluginsync=false
-  factsync=false
+  ssldir = /etc/poolparty/ssl
+  pluginsync = false
+  factsync = false
+
+[puppetca]
+  config = $config/puppetca.conf
  
+[certificates]
+  publickeydir = /etc/poolparty/public_keys
+  certdir = /etc/poolparty/certs
+  privatekeydir = /etc/poolparty/private_keys
+
+[ca]
+  signeddir = /etc/poolparty/signed
+
 [puppetd]
   localconfig = $vardir/localconfig      
-  report=true
-  server=master
-
-[puppetrun]
-  certname = master
+  report = true
+  server = master
   
 [puppetmasterd]
   certname = master
+  server = master
