Starting to add the custom monitors

--- a/lib/poolparty/templates/puppet.conf
+++ b/lib/poolparty/templates/puppet.conf
@@ -2,8 +2,10 @@
   vardir = /var/lib/puppet
   logdir = /var/log/puppet
   ssldir = /etc/poolparty/ssl
-  pluginsync = false
-  factsync = false
+  modulepath = /etc/poolparty/modules
+  factsync = true
+  pluginsync = true
+  factpath = $vardir/lib/facter
 
 [puppetca]
   config = $config/puppetca.conf
@@ -24,3 +26,4 @@
 [puppetmasterd]
   certname = master
   server = master
+  storeconfigs = true
