--- a/lib/poolparty/templates/puppet.conf
+++ b/lib/poolparty/templates/puppet.conf
@@ -2,10 +2,10 @@
   vardir = /var/lib/puppet
   logdir = /var/log/puppet
   ssldir = /etc/poolparty/ssl
-  modulepath = /etc/poolparty/modules
-  factsync = true
-  pluginsync = true
-  factpath = $vardir/lib/facter
+  modulepath = /etc/poolparty/modules:$confdir/modules
+  # factsync = true
+  # pluginsync = true
+  # factpath = $vardir/lib/facter
 
 [puppetca]
   config = $config/puppetca.conf
