Pushed newest conf and gem for github

--- a/lib/poolparty/templates/puppet.conf
+++ b/lib/poolparty/templates/puppet.conf
@@ -2,7 +2,7 @@
   vardir = /var/lib/puppet
   logdir = /var/log/puppet
   ssldir = /etc/poolparty/ssl
-  modulepath = /etc/poolparty/modules:$confdir/modules
+  modulepath = /etc/poolparty/modules:$confdir/modules:/usr/share/puppet/modules
   # factsync = true
   # pluginsync = true
   # factpath = $vardir/lib/facter
