Updated oscopy Cleaned up haproxy Cleaned up poolparty base package Added reloads, calls, stops, starts to chef_resolver Added owner to git

--- a/lib/poolparty/templates/haproxy.conf
+++ b/lib/poolparty/templates/haproxy.conf
@@ -8,8 +8,7 @@ global
   log 127.0.0.1 local0 debug
   pidfile /var/run/haproxy.pid
  
-defaults
-  mode              http
+defaults  
   log               global # Log to the global log
   clitimeout 150000
   srvtimeout 150000
@@ -28,9 +27,10 @@ defaults
   stats uri /poolparty
   stats realm Statistics\ for\ PoolParty
 
-listen poolparty
-    bind 0.0.0.0:<%= ports_haproxy.join(",0.0.0.0:") %>
+listen <%= @node[:poolparty][:haproxy_name] %>
+    mode              <%= @node[:poolparty][:proxy_mode] %>
+    bind 0.0.0.0:<%= @node[:poolparty][:ports_haproxy].join(",0.0.0.0:") %>
     cookie POOLPARTYPARTY
-    <%- node_ips_haproxy.chomp.split(/\t/).each_with_index do |ip, index| -%>    
-    server <%= index == 0 ? "master" : "node#{index}" %> <%= ip %>:<%= forwarding_port %> weight 1 check cookie
-    <%- end -%>
+    <% %x[/usr/bin/server-list-active ip].split("\t").each_with_index do |ip, index| %>
+    server <%= index == 0 ? "master" : "node#{index}" %> <%= ip %>:<%= @node[:poolparty][:forwarding_port] %> weight 1 check cookie
+    <% end %>
