Change haproxy to use internal_ips. Fix chef templates to use expanded filepath

--- a/lib/poolparty/templates/haproxy.conf
+++ b/lib/poolparty/templates/haproxy.conf
@@ -31,6 +31,6 @@ listen <%= @node[:poolparty][:haproxy_name] %>
     mode              <%= @node[:poolparty][:proxy_mode] %>
     bind 0.0.0.0:<%= @node[:poolparty][:ports_haproxy].join(",0.0.0.0:") %>
     cookie POOLPARTYPARTY
-    <% %x[/usr/bin/server-list-active ip].split("\t").each_with_index do |ip, index| %>
+    <% %x[/usr/bin/server-list-active internal_ip].split("\t").each_with_index do |ip, index| %>
     server <%= index == 0 ? "master" : "node#{index}" %> <%= ip %>:<%= @node[:poolparty][:forwarding_port] %> weight 1 check cookie
     <% end %>
