--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vendor/gems/butterfly"]
 	path = vendor/gems/butterfly
 	url = git://github.com/auser/butterfly.git
+[submodule "vendor/gems/git-style-binaries"]
+	path = vendor/gems/git-style-binaries
+	url = git://github.com/jashmenn/git-style-binaries.git
