* Added default_options to haproxy and called loaded, not enable when calling haproxy (so it can be configured with a block) * Moved the configs call to the loaded method so apache2 can be configured with the block * Added a cloud method on plugin to look up the context stack to find the cloud * Added a default name to the listen statement in haproxy, just in case

--- a/lib/poolparty/templates/haproxy.conf
+++ b/lib/poolparty/templates/haproxy.conf
@@ -29,7 +29,7 @@ defaults
   stats uri     /poolparty
   stats realm   Statistics\ for\ PoolParty
 
-listen <%= @node[:poolparty][:haproxy_name] %>
+listen PoolParty-site-<%= @node[:poolparty][:haproxy_name] %>
   mode          <%= @node[:poolparty][:proxy_mode] %>
   bind          0.0.0.0:<%= @node[:poolparty][:ports_haproxy].join(",0.0.0.0:") %>
   cookie        POOLPARTY
