fix bug in haproxy template. Update apache passengersite plugin

--- a/lib/poolparty/templates/haproxy.conf
+++ b/lib/poolparty/templates/haproxy.conf
@@ -34,5 +34,5 @@ listen PoolParty-site-<%= @node[:poolparty][:haproxy_name] %>
   bind          0.0.0.0:<%= @node[:poolparty][:ports_haproxy].join(",0.0.0.0:") %>
   cookie        POOLPARTY
 <% %x[/usr/bin/server-list-active internal_ip].split("\t").each_with_index do |ip, index| %>
-  server        <%= index == 0 ? "master" : "node#{index}" %> <%= ip %>:<%= @node[:poolparty][:forwarding_port] %> weight 1 check cookie
+  server        <%= index == 0 ? "master" : "node#{index}" %> <% ip %>:<% @node[:poolparty][:forwarding_port] %> weight 1 check cookie
 <% end %>
