Updated thrift generation and examples to take and send arguments

--- a/examples/thrift/erlang/Makefile
+++ b/examples/thrift/erlang/Makefile
@@ -13,7 +13,7 @@ deps: thrift
 compile:
 	@$(ERL) -pa $(EBIN_DIRS) -noinput +B -eval 'case make:all() of up_to_date -> halt(0); error -> halt(1) end.'
 
-run:
+run: all
 	@$(ERL) -pa ./ebin -pa $(EBIN_DIRS) -s -s thrift_example run -s init stop
 
 ebin:
