--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,5 @@ tags
 .session
 clouds.rb
 test/test_dir/
-examples/thrift/erlang/deps/thrift/ebin/*
-examples/thrift/erlang/ebin/*
+examples/thrift/erlang/deps/thrift/ebin/*.beam
+examples/thrift/erlang/ebin/*.beam
