--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vendor/gems/amazon-ec2"]
 	path = vendor/gems/amazon-ec2
-	url = git://github.com/grempe/amazon-ec2.git
+	url = https://github.com/grempe/amazon-ec2.git
